--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,3 +16,8 @@ phases:
       - echo Build completed on `date`  
     finally:  
       - echo Build completed on `date`  
+artifacts:
+  files:
+    - **/*
+  discard-paths: yes
+  base-directory: 'javacode'
