--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,6 @@ phases:
       - echo Build completed on `date`  
 artifacts:
   files:
-    - **/*
+    - Simple.java
   discard-paths: yes
-  base-directory: 'javacode'
+  
